--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
              <!--infor de la fiesta-->
             <div class="infoFiesta">
-              <img src= "img/invitacionfiesta.jpg" class="inforFiesta"> 
+              <img src= "inv1.jfif" class="inforFiesta"> 
             </div> 
         </section>
         
