--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header class="header">
      <img src="img\Purple Sky Profile Header.gif" class="headerVideo"></img>
     </header>    
+          <audio src="img\04d43c929e36716a1d536526c190d903_12072024.mp3" autoplay></audio> 
         <section class="buttonSpace">
             <!--boton de formulario para conteo de invitados-->
             <button class="cssbuttons-io" id="miBoton">
